# srv_fire

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ia  ia.cbp  main.cpp  srv_fire
Utilitary/: loger.hpp
Utilitary/header/: ProcessCommunication.hh
Utilitary/sources/: Error.cpp  LogNetwork.cpp  ProcessCommunication.cpp
imageAnalyzing/input/config/: xml_test.xml
imageAnalyzing/src/header/Analyser/: BlobFilter.hh  EntityFilter.hh  IdManager.hpp  ImageProcesser.hh  ScalarColor.hpp
imageAnalyzing/src/header/Launcher/: Launcher.hh
imageAnalyzing/src/header/Network/: ProcessCommunication.hh
imageAnalyzing/src/source/Analyser/: Entity.cpp  ImageProcesser.cpp  (+1 more)
network/: properties.txt
network/include/: ANetwork.hpp  BusinessLogicManager.hh  PacketHandler.h  ProtocolManager.hh  connectionHandler.h
network/src/: BusinessLogicManager.cpp  PacketHandler.cpp  ProtocolManager.cpp  connectionHandler.cpp
src/IA/script/: launch_server.cpp
src/IA_plus_SRV/: CMakeLists.txt  Makefile  main.cpp
src/IA_plus_SRV/network/: properties.txt
src/bouvie_a/: main.cpp
src/bouvie_a/Include/: BusinessLogicManager.hh  ConnectionHandler.h  Image.hh  Pixel.hh
src/bouvie_a/Src/: BusinessLogicManager.cpp  ConnectionHandler.cpp  Error.cpp  Image.cpp  ImageAnalyser.cpp  Packet.cpp  PacketHandler.cpp  Pixel.cpp  Request.cpp  Zone.cpp  ZoneAnalyser.cpp
src/nasrat_v/: CMakeLists.txt  todo  todo srv_fire
src/nasrat_v/WIP_feature/Server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server_test  todo  todo~
src/nasrat_v/WIP_feature/Server/Log/: tata  toto
src/nasrat_v/WIP_feature/Server/cmake_build/: Makefile  server_test
src/nasrat_v/WIP_feature/Server/header/: Client.hh  ClientNetwork.hh  NetworkManager.hh  NetworkTypes.hh  Packet.hh  PacketsManager.hh  ProcessCommunication.hh  ServerNetwork.hh
src/nasrat_v/WIP_feature/Server/header/Log/: LogNetwork.hh
src/nasrat_v/WIP_feature/Server/header/backup_packets_manager/: PacketParser.hh  PacketsManager.hh
src/nasrat_v/WIP_feature/Server/input/: toto.png~
src/nasrat_v/WIP_feature/Server/source/: AsyncServer.cpp  Client.cpp  ClientNetwork.cpp  Main.cpp  NetworkManager.cpp  PacketParser.cpp  PacketsManager.cpp  ProcessCommunication.cpp  ServerNetwork.cpp
src/nasrat_v/WIP_feature/Server/source/Log/: LogNetwork.cpp
src/nasrat_v/WIP_feature/Server/source/backup_packets_manager/: PacketsManager.cpp
src/nasrat_v/WIP_feature/movement_prediction/: Makefile  draw.cpp  log.cpp  main.cpp  mouse.cpp  movement_prediction  movement_prediction.hh  prediction.cpp
src/nasrat_v/exemple/MultiObjectTrackingBasedOnColor-master/: Object.h  multipleObjectTracking.cpp
src/nasrat_v/exemple/OpenCV_3_Multiple_Object_Tracking_by_Image_Subtraction_Cpp-master/: Blob.cpp  a.out  main.cpp
src/nasrat_v/lib/tinyxml2/source/: tinyxml2.cpp
src/nasrat_v/output/log/: log.txt
src/nasrat_v/output/log/error/: error_log.txt
src/nasrat_v/output/video/: 2019-05-21 19-06-13.flv  2019-05-21 19-06-55.flv
src/nasrat_v/script/: launch_server.cpp  server_test
src/nasrat_v/script/server_test_processnetwork/: Makefile  launch_server.cpp
src/nasrat_v/src/: Main.cpp
src/nasrat_v/src/header/: ANetwork.hpp  BusinessLogicManager.hh  ConfigManager.h  DebugManager.h  Entity.h  Error.hh  Frame.h  Frame.hh  FrameAddition.h  FrameAnalyser.h  FrameAnalyser.hh  FrameProcessing.h  FrameSubstraction.h  Image.hh  ImageAdditionner.h  ImageAnalyser.hh  ImageProcesser.h  ImageProcesser.hh  ImageProvider.h  ImageProvider.hh  ImageService.h  ImageService.hh  Launcher.hh  Packet.hh  PacketHandler.hh  ParamManager.hh  Pixel.hh  StreamAnalyser.h  Zone.hh  ZoneAnalyser.hh
src/nasrat_v/src/header/Analyser/: Blob.hh  Entity.hh  Frame.hh  FrameAnalyser.hh  ImageAdditionner.hh  ImageProcesser.hh  ImageProvider.hh  ImageService.hh
src/nasrat_v/src/header/Launcher/: DebugManager.hh  Launcher.hh  ParamManager.hh  ProcessManager.hh
src/nasrat_v/src/header/Log/: Error.hh  Log.hh
src/nasrat_v/src/header/Network/: AsyncServer.hh  Client.hh  ClientNetwork.hh  NetworkManager.hh  NetworkTypes.hh  Packet.hh  PacketsManager.hh  ProcessCommunication.hh  ServerNetwork.hh
src/nasrat_v/src/header/Network/Log/: LogNetwork.hh
src/nasrat_v/src/header/business_logic_layer/: BusinessLogicManager.hh  ImageAnalyser.hh  ZoneAnalyser.hh
src/nasrat_v/src/header/data_transfert_object/: Image.hh  Pixel.hh  Request.hh  Zone.hh
src/nasrat_v/src/header/output_static_object/: Error.hh  Log.hh
src/nasrat_v/src/source/: BusinessLogicManager.cpp  ConfigManager.cpp  ConnectionHandler.cpp  DebugManager.cpp  Entity.cpp  Error.cpp  Frame.cpp  FrameAddition.cpp  FrameAnalyser.cpp  FrameProcessing.cpp  FrameSubstraction.cpp  Image.cpp  ImageAdditionner.cpp  ImageAnalyser.cpp  ImageProcesser.cpp  ImageProvider.cpp  ImageService.cpp  Launcher.cpp  Main.cpp  Packet.cpp  PacketHandler.cpp  ParamManager.cpp  Pixel.cpp  Request.cpp  StreamAnalyser.cpp  Zone.cpp  ZoneAnalyser.cpp
src/nasrat_v/src/source/Analyser/: Blob.cpp  BlobFilter.cpp  Entity.cpp  EntityFilter.cpp  Frame.cpp  FrameAnalyser.cpp  ImageAdditionner.cpp  ImageProcesser.cpp  ImageProvider.cpp  ImageService.cpp
src/nasrat_v/src/source/Launcher/: DebugManager.cpp  Launcher.cpp  Main.cpp  ParamManager.cpp  ProcessManager.cpp
src/nasrat_v/src/source/Log/: Error.cpp  Log.cpp
src/nasrat_v/src/source/Network/: AsyncServer.cpp  Client.cpp  ClientNetwork.cpp  NetworkManager.cpp  PacketsManager.cpp  ProcessCommunication.cpp  ServerNetwork.cpp
src/nasrat_v/src/source/Network/Log/: LogNetwork.cpp
src/nasrat_v/src/source/business_logic_layer/: BusinessLogicManager.cpp  ImageAnalyser.cpp  ZoneAnalyser.cpp
src/nasrat_v/src/source/data_transfert_object/: Image.cpp  Packet.cpp  Pixel.cpp  Request.cpp  Zone.cpp
src/nasrat_v/src/source/output_static_object/: Error.cpp  Log.cpp
src/nasrat_v/src_en_cours/header/: BusinessLogicManager.hh  Image.hh  Pixel.hh  ZoneAnalyser.hh
src/nasrat_v/src_en_cours/source/: Image.cpp  ImageAnalyser.cpp  Packet.cpp  Pixel.cpp  Zone.cpp  ZoneAnalyser.cpp
(+43 files in other folders)
